# audio-transcriber

./: Dockerfile  README.md  pyproject.toml  transcriber.py
.github/workflows/: multi-build.yaml
