[project]
name = "audio-transcriber"
version = "0.1.2"
description = "A basic project to make use of the OpenAI Whisper general-purpose speech recognition model to transcribe audio files"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "MIT"
requires-python = ">=3.13,<4.0"
dependencies = [
  "ipython>=9.7.0",
  "openai-whisper==20250625",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
  "azure-storage-blob==12.28.0",
]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = ["E265", "E501", "E722"]
